--- a/Supervised Machine Learning Regression and Classification/week2/work/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
+++ b/Supervised Machine Learning Regression and Classification/week2/work/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.zeros(4) :   a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
+      "np.zeros(4,) :  a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
+      "np.random.random_sample(4): a = [0.98659265 0.84883936 0.93269786 0.71448056], a shape = (4,), a data type = float64\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill arrays with value\n",
     "a = np.zeros(4);                print(f\"np.zeros(4) :   a = {a}, a shape = {a.shape}, a data type = {a.dtype}\")\n",
@@ -122,9 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.arange(4.):     a = [0. 1. 2. 3.], a shape = (4,), a data type = float64\n",
+      "np.random.rand(4): a = [0.40225642 0.34013064 0.21005123 0.77928467], a shape = (4,), a data type = float64\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill arrays with value but do not accept shape as input argument\n",
     "a = np.arange(4.);              print(f\"np.arange(4.):     a = {a}, a shape = {a.shape}, a data type = {a.dtype}\")\n",
@@ -140,9 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.array([5,4,3,2]):  a = [5 4 3 2],     a shape = (4,), a data type = int64\n",
+      "np.array([5.,4,3,2]): a = [5. 4. 3. 2.], a shape = (4,), a data type = float64\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill with user specified values\n",
     "a = np.array([5,4,3,2]);  print(f\"np.array([5,4,3,2]):  a = {a},     a shape = {a.shape}, a data type = {a.dtype}\")\n",
@@ -173,9 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "a[2].shape: () a[2]  = 2, Accessing an element returns a scalar\n",
+      "a[-1] = 9\n",
+      "The error message you'll see is:\n",
+      "index 10 is out of bounds for axis 0 with size 10\n"
+     ]
+    }
+   ],
    "source": [
     "#vector indexing operations on 1-D vectors\n",
     "a = np.arange(10)\n",
@@ -206,9 +246,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a         = [0 1 2 3 4 5 6 7 8 9]\n",
+      "a[2:7:1] =  [2 3 4 5 6]\n",
+      "a[2:7:2] =  [2 4 6]\n",
+      "a[3:]    =  [3 4 5 6 7 8 9]\n",
+      "a[:3]    =  [0 1 2]\n",
+      "a[:]     =  [0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#vector slicing operations\n",
     "a = np.arange(10)\n",
@@ -241,9 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a             : [1 2 3 4]\n",
+      "b = -a        : [-1 -2 -3 -4]\n",
+      "b = np.sum(a) : 10\n",
+      "b = np.mean(a): 2.5\n",
+      "b = a**2      : [ 1  4  9 16]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3,4])\n",
     "print(f\"a             : {a}\")\n",
@@ -274,9 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary operators work element wise: [0 0 6 8]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([ 1, 2, 3, 4])\n",
     "b = np.array([-1,-2, 3, 4])\n",
@@ -292,9 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The error message you'll see is:\n",
+      "operands could not be broadcast together with shapes (4,) (2,) \n"
+     ]
+    }
+   ],
    "source": [
     "#try a mismatched vector operation\n",
     "c = np.array([1, 2])\n",
@@ -316,9 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b = 5 * a : [ 5 10 15 20]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3, 4])\n",
     "\n",
@@ -364,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,9 +477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_dot(a, b) = 24\n"
+     ]
+    }
+   ],
    "source": [
     "# test 1-D\n",
     "a = np.array([1, 2, 3, 4])\n",
@@ -408,9 +506,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy 1-D np.dot(a, b) = 24, np.dot(a, b).shape = () \n",
+      "NumPy 1-D np.dot(b, a) = 24, np.dot(a, b).shape = () \n"
+     ]
+    }
+   ],
    "source": [
     "# test 1-D\n",
     "a = np.array([1, 2, 3, 4])\n",
@@ -439,9 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.dot(a, b) =  2501072.5817\n",
+      "Vectorized version duration: 6.0740 ms \n",
+      "my_dot(a, b) =  2501072.5817\n",
+      "loop version duration: 4457.4881 ms \n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "a = np.random.rand(10000000)  # very large arrays\n",
@@ -616,9 +734,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a.shape: (3, 2), \n",
+      "a= [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "\n",
+      "a[2,0].shape:   (), a[2,0] = 4,     type(a[2,0]) = <class 'numpy.int64'> Accessing an element returns a scalar\n",
+      "\n",
+      "a[2].shape:   (2,), a[2]   = [4 5], type(a[2])   = <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "#vector indexing operations on matrices\n",
     "a = np.arange(6).reshape(-1, 2)   #reshape is a convenient way to create matrices\n",
@@ -707,7 +840,7 @@
    "rndtag": "40015"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -721,9 +854,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.5"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
