--- a/Unsupervised learning recommenders reinforcement learning/week3/Practice Lab-Reinforcement Learning/C3_W3_A1_Assignment.ipynb
+++ b/Unsupervised learning recommenders reinforcement learning/week3/Practice Lab-Reinforcement Learning/C3_W3_A1_Assignment.ipynb
@@ -54,11 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "KYbOPKRtfQOr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-31 19:56:58.080778: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from collections import deque, namedtuple\n",
@@ -78,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up a virtual display to render the Lunar Lander environment.\n",
-    "Display(visible=0, size=(840, 480)).start();\n",
+    "# Display(visible=0, size=(840, 480)).start();\n",
     "\n",
     "# Set the random seed for TensorFlow\n",
     "tf.random.set_seed(utils.SEED)"
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "ILVMYKewfR0n"
    },
@@ -233,11 +242,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "x3fdqdG4CUu2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State Shape: (8,)\n",
+      "Number of actions: 4\n"
+     ]
+    }
+   ],
    "source": [
     "state_size = env.observation_space.shape\n",
     "num_actions = env.action_space.n\n",
@@ -285,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,15 +329,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial State: (array([-0.008, 1.405, -0.778, -0.255, 0.009, 0.176, 0.000, 0.000],\n",
+      "      dtype=float32), {})\n",
+      "Action: 0\n",
+      "Next State: [-0.031 1.384 -0.777 -0.334 0.035 0.174 0.000 0.000]\n",
+      "Reward Received: -1.153923950271917\n",
+      "Episode Terminated: False\n",
+      "Info: False\n"
+     ]
+    }
+   ],
    "source": [
     "# Select an action\n",
     "action = 0\n",
     "\n",
     "# Run a single time step of the environment's dynamics with the given action.\n",
-    "next_state, reward, done, info = env.step(action)\n",
+    "next_state, reward, done, info, what = env.step(action)\n",
     "\n",
     "with np.printoptions(formatter={'float': '{:.3f}'.format}):\n",
     "    print(\"Initial State:\", initial_state)\n",
@@ -428,6 +460,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# UNQ_C1\n",
     "# GRADED CELL\n",
@@ -435,27 +474,43 @@
     "# Create the Q-Network\n",
     "q_network = Sequential([\n",
     "    ### START CODE HERE ### \n",
-    "\n",
+    "    Input(shape = state_size),\n",
+    "    tf.keras.layers.Dense(64,activation='relu'),\n",
+    "    tf.keras.layers.Dense(64,activation='relu'),\n",
+    "    tf.keras.layers.Dense(num_actions,activation='linear')\n",
     "    ### END CODE HERE ### \n",
     "    ])\n",
     "\n",
     "# Create the target Q^-Network\n",
     "target_q_network = Sequential([\n",
     "    ### START CODE HERE ### \n",
-    "\n",
+    "    Input(shape = state_size),\n",
+    "    tf.keras.layers.Dense(64,activation='relu'),\n",
+    "    tf.keras.layers.Dense(64,activation='relu'),\n",
+    "    tf.keras.layers.Dense(num_actions,activation='linear')\n",
     "    ### END CODE HERE ###\n",
     "    ])\n",
     "\n",
     "### START CODE HERE ### \n",
-    "optimizer = None\n",
+    "optimizer = Adam(learning_rate=ALPHA)\n",
     "### END CODE HERE ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mAll tests passed!\n",
+      "\u001b[92mAll tests passed!\n",
+      "\u001b[92mAll tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST\n",
     "from public_tests import *\n",
@@ -507,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +657,8 @@
     "    \n",
     "    # Set y = R if episode terminates, otherwise set y = R + γ max Q^(s,a).\n",
     "    ### START CODE HERE ### \n",
-    "    y_targets = None\n",
+    "    y_targets = rewards + gamma * max_qsa * (1-done_vals)\n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # Get the q_values\n",
@@ -612,7 +668,7 @@
     "        \n",
     "    # Compute the loss\n",
     "    ### START CODE HERE ### \n",
-    "    loss = None \n",
+    "    loss = MSE(y_targets,q_values)\n",
     "    ### END CODE HERE ### \n",
     "    \n",
     "    return loss"
@@ -620,9 +676,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mAll tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST    \n",
     "test_compute_loss(compute_loss)"
@@ -689,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,9 +844,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/liuchen/Library/Python/3.8/lib/python/site-packages/numpy/lib/shape_base.py:591: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  a = asanyarray(a)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type numpy.ndarray).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [27], line 27\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(max_num_timesteps):\n\u001b[1;32m     24\u001b[0m     \n\u001b[1;32m     25\u001b[0m     \u001b[38;5;66;03m# From the current state S choose an action A using an ε-greedy policy\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     state_qn \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mexpand_dims(state, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)  \u001b[38;5;66;03m# state needs to be the right shape for the q_network\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m     q_values \u001b[38;5;241m=\u001b[39m q_network(state_qn)\n\u001b[1;32m     28\u001b[0m     action \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mget_action(q_values, epsilon)\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# Take action A and receive reward R and the next state S'\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/tensorflow/python/framework/constant_op.py:102\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[0;34m(value, ctx, dtype)\u001b[0m\n\u001b[1;32m    100\u001b[0m     dtype \u001b[39m=\u001b[39m dtypes\u001b[39m.\u001b[39mas_dtype(dtype)\u001b[39m.\u001b[39mas_datatype_enum\n\u001b[1;32m    101\u001b[0m ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[0;32m--> 102\u001b[0m \u001b[39mreturn\u001b[39;00m ops\u001b[39m.\u001b[39;49mEagerTensor(value, ctx\u001b[39m.\u001b[39;49mdevice_name, dtype)\n",
+      "\u001b[0;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type numpy.ndarray)."
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "\n",
@@ -971,7 +1057,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -985,7 +1071,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
