--- a/Advanced Learning Algorithms/week4/7.Practice lab decision trees/C2_W4_Decision_Tree_with_Markdown.ipynb
+++ b/Advanced Learning Algorithms/week4/7.Practice lab decision trees/C2_W4_Decision_Tree_with_Markdown.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First few elements of X_train:\n",
+      " [[1 1 1]\n",
+      " [1 0 1]\n",
+      " [1 0 0]\n",
+      " [1 0 0]\n",
+      " [1 1 1]]\n",
+      "Type of X_train: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"First few elements of X_train:\\n\", X_train[:5])\n",
     "print(\"Type of X_train:\",type(X_train))"
@@ -163,9 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First few elements of y_train: [1 1 0 0 1]\n",
+      "Type of y_train: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"First few elements of y_train:\", y_train[:5])\n",
     "print(\"Type of y_train:\",type(y_train))"
@@ -184,9 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of X_train is: (10, 3)\n",
+      "The shape of y_train is:  (10,)\n",
+      "Number of training examples (m): 10\n"
+     ]
+    }
+   ],
    "source": [
     "print ('The shape of X_train is:', X_train.shape)\n",
     "print ('The shape of y_train is: ', y_train.shape)\n",
@@ -249,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +305,12 @@
     "    entropy = 0.\n",
     "    \n",
     "    ### START CODE HERE ###\n",
-    "           \n",
+    "    import math\n",
+    "    p1 = sum(y)/len(y) if len(y) != 0 else 0 \n",
+    "    if p1 == 0 or p1 == 1:\n",
+    "        entropy = 0 \n",
+    "    else:\n",
+    "        entropy = -p1 * math.log(p1,2) - (1-p1) * math.log(1-p1,2)\n",
     "    ### END CODE HERE ###        \n",
     "    \n",
     "    return entropy"
@@ -347,9 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entropy at root node:  1.0\n",
+      "\u001b[92m All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute entropy at the root node (i.e. with all examples)\n",
     "# Since we have 5 edible and 5 non-edible mushrooms, the entropy should be 1\"\n",
@@ -413,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +487,11 @@
     "    right_indices = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
-    "           \n",
+    "    for i in node_indices:\n",
+    "        if X[i][feature] == 1:\n",
+    "            left_indices.append(i)\n",
+    "        else:\n",
+    "            right_indices.append(i)\n",
     "    ### END CODE HERE ###\n",
     "        \n",
     "    return left_indices, right_indices"
@@ -494,9 +545,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left indices:  [0, 1, 2, 3, 4, 7, 9]\n",
+      "Right indices:  [5, 6, 8]\n",
+      "\u001b[92m All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "root_indices = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "\n",
@@ -554,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,11 +650,18 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Weights \n",
+    "    total_size = len(X_node)\n",
+    "    left_size = len(X_left)\n",
+    "    right_size = len(X_right)\n",
+    "    w_left = left_size/total_size\n",
+    "    w_right = right_size/total_size\n",
     "    \n",
     "    #Weighted entropy\n",
-    "     \n",
-    "    #Information gain                                                   \n",
     "    \n",
+    "    weighted_entropy = w_left * compute_entropy(y_left) + w_right * compute_entropy(y_right)\n",
+    "    prev_entropy = compute_entropy(y_node)\n",
+    "    #Information gain                                                   \n",
+    "    information_gain = prev_entropy - weighted_entropy\n",
     "    ### END CODE HERE ###  \n",
     "    \n",
     "    return information_gain"
@@ -686,9 +754,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Information Gain from splitting the root on brown cap:  0.034851554559677034\n",
+      "Information Gain from splitting the root on tapering stalk shape:  0.12451124978365313\n",
+      "Information Gain from splitting the root on solitary:  0.2780719051126377\n",
+      "\u001b[92m All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "info_gain0 = compute_information_gain(X_train, y_train, root_indices, feature=0)\n",
     "print(\"Information Gain from splitting the root on brown cap: \", info_gain0)\n",
@@ -741,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +848,12 @@
     "    best_feature = -1\n",
     "    \n",
     "    ### START CODE HERE ###\n",
-    "       \n",
+    "    greatest_gain = 0\n",
+    "    for i in range(num_features):\n",
+    "        info_gain = compute_information_gain(X,y,node_indices,i)\n",
+    "        if info_gain > greatest_gain:\n",
+    "            greatest_gain = info_gain\n",
+    "            best_feature = i \n",
     "    ### END CODE HERE ##    \n",
     "   \n",
     "    return best_feature"
@@ -837,9 +921,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best feature to split on: 2\n",
+      "\u001b[92m All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "best_feature = get_best_split(X_train, y_train, root_indices)\n",
     "print(\"Best feature to split on: %d\" % best_feature)\n",
@@ -869,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,9 +1008,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Depth 0, Root: Split on feature: 2\n",
+      "- Depth 1, Left: Split on feature: 0\n",
+      "  -- Left leaf node with indices [0, 1, 4, 7]\n",
+      "  -- Right leaf node with indices [5]\n",
+      "- Depth 1, Right: Split on feature: 1\n",
+      "  -- Left leaf node with indices [8]\n",
+      "  -- Right leaf node with indices [2, 3, 6, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "build_tree_recursive(X_train, y_train, root_indices, \"Root\", max_depth=2, current_depth=0)"
    ]
@@ -932,7 +1039,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -946,7 +1053,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
